v1.0.0/modules/schema/pages/class/Outage.adoc
= `Outage`
:toclevels: 4


+++Document describing details of an active or planned outage in a part of the electrical network.
A non-planned outage may be created upon:
- a breaker trip,
- a fault indicator status change,
- a meter event indicating customer outage,
- a reception of one or more customer trouble calls, or
- an operator command, reflecting information obtained from the field crew.
Outage restoration may be performed using a switching plan which complements the outage information with detailed switching activities, including the relationship to the crew and work.
A planned outage may be created upon:
- a request for service, maintenance or construction work in the field, or
- an operator-defined outage for what-if/contingency network analysis.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Outage`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Document.adoc[`Document`]
*** *`Outage`*
 **** xref::class/PlannedOutage.adoc[`PlannedOutage`]
 **** xref::class/UnplannedOutage.adoc[`UnplannedOutage`]


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Outage {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DateTimeInterval {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DateTimeInterval {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ServicePointOutageSummary {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



UsagePoint {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Equipment {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



SwitchAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



UsagePoint {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Fault {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Crew {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ConductingEquipment {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Incident {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



EstimatedRestorationTime {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



SwitchingPlan {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OutageArea {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ElectronicAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ActivityRecord {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Author {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Editor {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Approver {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Issuer {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




Outage -> DateTimeInterval: actualPeriod


Outage -> DateTimeInterval: estimatedPeriod


Outage -> ServicePointOutageSummary: summary


Outage -> UsagePoint: EnergizedUsagePoint


Outage -> Equipment: Equipments


Outage -> SwitchAction: PlannedSwitchActions


Outage -> UsagePoint: DeEnergizedUsagePoint


Outage -> Fault: Faults


Outage -> Crew: Crew


Outage -> ConductingEquipment: OutageIsolationEquipment


Outage -> Incident: Incident


Outage -> EstimatedRestorationTime: EstimatedRestorationTime


Outage -> SwitchingPlan: SwitchingPlans


Outage -> OutageArea: OutageArea


Outage -> Status: docStatus


Outage -> ElectronicAddress: electronicAddress


Outage -> Status: status


Outage -> ActivityRecord: ActivityRecord


Outage -> ConfigurationEvent: ConfigurationEvents


Outage -> Author: Author


Outage -> Editor: Editor


Outage -> Approver: Approver


Outage -> Issuer: Issuer


Outage -> DiagramObject: DiagramObjects


Outage -> InstanceSet: InstanceSet


Outage -> Name: Names


Outage -> ChangeSetMember: PropertiesCIMDataObject


Outage -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<originalCustomersServed,`originalCustomersServed`>>
| 1
| https://w3id.org/linkml/Integer[`integer`]
| +++the total number of customers that are served in the area (both outaged and not outaged).+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<EstimatedRestorationTime,`EstimatedRestorationTime`>>
| 0..1
| xref::class/EstimatedRestorationTime.adoc[`EstimatedRestorationTime`]
| +++The estimated time that the power will be restored after an outage+++

| <<actualPeriod,`actualPeriod`>>
| 0..1
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]
| +++Actual outage period; end of the period corresponds to the actual restoration time.+++

| <<communityDescriptor,`communityDescriptor`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++a name to denote the community - this could be a name or a code of some kind.+++

| <<customersRestored,`customersRestored`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++number of customers that have been restored in the area.+++

| <<estimatedPeriod,`estimatedPeriod`>>
| 0..1
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]
| +++Estimated outage period for a planned outage. The start of the period is the start of the planned outage and the end of the period corresponds to the end of the planned outage.+++

| <<metersAffected,`metersAffected`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++The updated number of meters affected by the outage as reported by the OMS within the utility.  It is assumed this number will be updated repeatedly until the full outage is resolved.+++

| <<originalMetersAffected,`originalMetersAffected`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++The original number of meters that were affected as reported by the OMS within the utility. That is, this is the total number of meters that were out at the beginning of the outage.+++

| <<outageKind,`outageKind`>>
| 0..1
| xref::enumeration/OutageStatusKind.adoc[`OutageStatusKind`]
| +++Defines if the outage has been verified or is only estimated+++

| <<statusKind,`statusKind`>>
| 0..1
| xref::enumeration/CrewStatusKind.adoc[`CrewStatusKind`]
| +++defines the status of the crew as in dispatched or arrived, etc.+++

| <<summary,`summary`>>
| 0..1
| xref::class/ServicePointOutageSummary.adoc[`ServicePointOutageSummary`]
| +++Summary counts of service points (customers) affected by this outage.+++

| <<utilityDisclaimer,`utilityDisclaimer`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++This contains an disclaimers the utility would like to place on the data provided to any stakeholder.  This may be different for different stakeholders.  This should possibly be an attribute under the Organization class but it is placed here for now.+++

| <<Crew,`Crew`>>
| 0..*
| xref::class/Crew.adoc[`Crew`]
| +++The crew that is assigned to the outage.+++

| <<DeEnergizedUsagePoint,`DeEnergizedUsagePoint`>>
| 0..*
| xref::class/UsagePoint.adoc[`UsagePoint`]
| +++all deenergized useage points associated with the outage.+++

| <<EnergizedUsagePoint,`EnergizedUsagePoint`>>
| 0..*
| xref::class/UsagePoint.adoc[`UsagePoint`]
| +++All energized usage points associated with this outage.+++

| <<Equipments,`Equipments`>>
| 0..*
| xref::class/Equipment.adoc[`Equipment`]
| +++All equipments associated with this outage.+++

| <<Faults,`Faults`>>
| 0..*
| xref::class/Fault.adoc[`Fault`]
| +++All faults involved in this outage.+++

| <<Incident,`Incident`>>
| 0..*
| xref::class/Incident.adoc[`Incident`]
| +++Incident reported in trouble call that results in this outage.+++

| <<OutageArea,`OutageArea`>>
| 0..*
| xref::class/OutageArea.adoc[`OutageArea`]
| +++The outage area where the outage occured.+++

| <<OutageIsolationEquipment,`OutageIsolationEquipment`>>
| 0..*
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]
| +++The equipment that isolates this outage+++

| <<PlannedSwitchActions,`PlannedSwitchActions`>>
| 0..*
| xref::class/SwitchAction.adoc[`SwitchAction`]
| +++All switch actions to apply within the scope of this planned outage. Each such action groups switches to which the action is to apply in order to produce the desired network state considered as outage.+++

| <<SwitchingPlans,`SwitchingPlans`>>
| 0..*
| xref::class/SwitchingPlan.adoc[`SwitchingPlan`]
| +++All switching plans that lead to supply restoration due to this outage. Only one will be retained for execution.+++

| <<Approver,`Approver`>>
| 0..1
| xref::class/Approver.adoc[`Approver`]
| +++Approver of this document.+++

| <<Author,`Author`>>
| 0..1
| xref::class/Author.adoc[`Author`]
| +++Author of this document.+++

| <<Editor,`Editor`>>
| 0..1
| xref::class/Editor.adoc[`Editor`]
| +++Editor of this document.+++

| <<Issuer,`Issuer`>>
| 0..1
| xref::class/Issuer.adoc[`Issuer`]
| +++Issuer of this document.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<authorName,`authorName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Name of the author of this document.+++

| <<comment,`comment`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Free text comment.+++

| <<createdDateTime,`createdDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time that this document was created.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<docStatus,`docStatus`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

| <<electronicAddress,`electronicAddress`>>
| 0..1
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++

| <<lastModifiedDateTime,`lastModifiedDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<revisionNumber,`revisionNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Revision number for this document.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

| <<subject,`subject`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document subject.+++

| <<title,`title`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document title.+++

| <<type,`type`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

| <<ActivityRecord,`ActivityRecord`>>
| 0..*
| xref::class/ActivityRecord.adoc[`ActivityRecord`]
| +++The activity record for a document+++

| <<ConfigurationEvents,`ConfigurationEvents`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this document.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#ActivityRecord]
=== `ActivityRecord`
+++The activity record for a document+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ActivityRecord`
| Cardinality
| 0..*
| Type
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#actualPeriod]
=== `actualPeriod`
+++Actual outage period; end of the period corresponds to the actual restoration time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.actualPeriod`
| Cardinality
| 0..1
| Type
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Approver]
=== `Approver`
+++Approver of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Approver`
| Cardinality
| 0..1
| Type
| xref::class/Approver.adoc[`Approver`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Author]
=== `Author`
+++Author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Author`
| Cardinality
| 0..1
| Type
| xref::class/Author.adoc[`Author`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#authorName]
=== `authorName`
+++Name of the author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.authorName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#comment]
=== `comment`
+++Free text comment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.comment`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#communityDescriptor]
=== `communityDescriptor`
+++a name to denote the community - this could be a name or a code of some kind.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.communityDescriptor`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#createdDateTime]
=== `createdDateTime`
+++Date and time that this document was created.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.createdDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Crew]
=== `Crew`
+++The crew that is assigned to the outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.Crew`
| Cardinality
| 0..*
| Type
| xref::class/Crew.adoc[`Crew`]


|===

//[discrete]
[#customersRestored]
=== `customersRestored`
+++number of customers that have been restored in the area.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.customersRestored`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#DeEnergizedUsagePoint]
=== `DeEnergizedUsagePoint`
+++all deenergized useage points associated with the outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.DeEnergizedUsagePoint`
| Cardinality
| 0..*
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#docStatus]
=== `docStatus`
+++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.docStatus`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Editor]
=== `Editor`
+++Editor of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Editor`
| Cardinality
| 0..1
| Type
| xref::class/Editor.adoc[`Editor`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#EnergizedUsagePoint]
=== `EnergizedUsagePoint`
+++All energized usage points associated with this outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.EnergizedUsagePoint`
| Cardinality
| 0..*
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

//[discrete]
[#Equipments]
=== `Equipments`
+++All equipments associated with this outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.Equipments`
| Cardinality
| 0..*
| Type
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#estimatedPeriod]
=== `estimatedPeriod`
+++Estimated outage period for a planned outage. The start of the period is the start of the planned outage and the end of the period corresponds to the end of the planned outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.estimatedPeriod`
| Cardinality
| 0..1
| Type
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]


|===

//[discrete]
[#EstimatedRestorationTime]
=== `EstimatedRestorationTime`
+++The estimated time that the power will be restored after an outage+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.EstimatedRestorationTime`
| Cardinality
| 0..1
| Type
| xref::class/EstimatedRestorationTime.adoc[`EstimatedRestorationTime`]


|===

//[discrete]
[#Faults]
=== `Faults`
+++All faults involved in this outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.Faults`
| Cardinality
| 0..*
| Type
| xref::class/Fault.adoc[`Fault`]


|===

//[discrete]
[#Incident]
=== `Incident`
+++Incident reported in trouble call that results in this outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.Incident`
| Cardinality
| 0..*
| Type
| xref::class/Incident.adoc[`Incident`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Issuer]
=== `Issuer`
+++Issuer of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Issuer`
| Cardinality
| 0..1
| Type
| xref::class/Issuer.adoc[`Issuer`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#lastModifiedDateTime]
=== `lastModifiedDateTime`
+++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.lastModifiedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#metersAffected]
=== `metersAffected`
+++The updated number of meters affected by the outage as reported by the OMS within the utility.  It is assumed this number will be updated repeatedly until the full outage is resolved.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.metersAffected`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#originalCustomersServed]
=== `originalCustomersServed`
+++the total number of customers that are served in the area (both outaged and not outaged).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.originalCustomersServed`
| Cardinality
| 1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#originalMetersAffected]
=== `originalMetersAffected`
+++The original number of meters that were affected as reported by the OMS within the utility. That is, this is the total number of meters that were out at the beginning of the outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.originalMetersAffected`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#OutageArea]
=== `OutageArea`
+++The outage area where the outage occured.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.OutageArea`
| Cardinality
| 0..*
| Type
| xref::class/OutageArea.adoc[`OutageArea`]


|===

//[discrete]
[#OutageIsolationEquipment]
=== `OutageIsolationEquipment`
+++The equipment that isolates this outage+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.OutageIsolationEquipment`
| Cardinality
| 0..*
| Type
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]


|===

//[discrete]
[#outageKind]
=== `outageKind`
+++Defines if the outage has been verified or is only estimated+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.outageKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/OutageStatusKind.adoc[`OutageStatusKind`]


|===

//[discrete]
[#PlannedSwitchActions]
=== `PlannedSwitchActions`
+++All switch actions to apply within the scope of this planned outage. Each such action groups switches to which the action is to apply in order to produce the desired network state considered as outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.PlannedSwitchActions`
| Cardinality
| 0..*
| Type
| xref::class/SwitchAction.adoc[`SwitchAction`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#revisionNumber]
=== `revisionNumber`
+++Revision number for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.revisionNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#status]
=== `status`
+++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#statusKind]
=== `statusKind`
+++defines the status of the crew as in dispatched or arrived, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.statusKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/CrewStatusKind.adoc[`CrewStatusKind`]


|===

//[discrete]
[#subject]
=== `subject`
+++Document subject.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.subject`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#summary]
=== `summary`
+++Summary counts of service points (customers) affected by this outage.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.summary`
| Cardinality
| 0..1
| Type
| xref::class/ServicePointOutageSummary.adoc[`ServicePointOutageSummary`]


|===

//[discrete]
[#SwitchingPlans]
=== `SwitchingPlans`
+++All switching plans that lead to supply restoration due to this outage. Only one will be retained for execution.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.SwitchingPlans`
| Cardinality
| 0..*
| Type
| xref::class/SwitchingPlan.adoc[`SwitchingPlan`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#title]
=== `title`
+++Document title.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.title`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#type]
=== `type`
+++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#utilityDisclaimer]
=== `utilityDisclaimer`
+++This contains an disclaimers the utility would like to place on the data provided to any stakeholder.  This may be different for different stakeholders.  This should possibly be an attribute under the Organization class but it is placed here for now.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Outage.utilityDisclaimer`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===


